dev/tests/cases/neg/54_variadic_not_last.tv
df bad(first: str, *rest: str, last: i64) -> void { echo!(first); }
df main() -> void {
    bad("x", 1);
}
